produit&categorie&Integration&symfony&javafx